<resources>
    <string name="app_name">Mis Datos</string>
    <string name="main_service_description">Servicio principal encargado de registrar el tráfico de datos y el ancho de banda de la red</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Controles</string>
    <string name="title_notifications">Notifications</string>
    <string name="firewall_service_running">Cortafuegos iniciado</string>
    <string name="main_notification_channel_name">Canal principal de notificaciones</string>
    <string name="alert_notification_channel_name">Canal de alertas y mensajes</string>
    <string name="generic_group_name">Grupo número %d</string>
    <string name="fail_sign_in">No se ha podido iniciar sesión</string>
    <string name="sign_up_fail">No se pudo crear la cuenta</string>
    <string name="sign_up_wrong_code">Código de verificación incorrecto</string>
    <string name="accessibility_service_description">Este servicio es necesario para poder detectar la compra de paquetes y la activación de la licencia.</string>
    <string name="missing_call_permission">Permiso de realizar llamadas denegado.</string>
    <string name="telephony_service_unavailable">El servicio de telefonía no está disponible.</string>
    <string name="ussd_return_failure">Ha fallado el código USSD. Si recibe este error constantemente puede ir a los Ajustes de la app, busque la opción Sincronización, desactive la Sincronización silenciosa y reintente</string>
    <string name="accessibility_service_unavailable">Servicio de accesibilidad inactivo.</string>
    <string name="response_timeout">Se ha agotado el tiempo de espera.</string>
    <string name="pkgs_not_configured">Los paquetes no están configurados. Debe ejecutar la configuracion de estos primero para comprar en paquete de manera segura.</string>
    <string name="pkg_not_configured">Este paquete no está configurado o no está activo. No puede comprarlo en estos momentos.</string>
    <string name="title_firewall">Cortafuegos</string>
    <string name="src_ip_template"><![CDATA[<b>src</b>%s:%d]]></string>
    <string name="dest_ip_template"><![CDATA[<b>dest:</b>%s:%d]]></string>
    <string name="log_activity_title">Log</string>
    <string name="c_1">iat</string>
    <string name="c_2">exp</string>
    <string name="c_3">aud</string>
    <string name="c_4">name</string>
    <string name="c_5">package_name</string>
    <string name="c_6">version</string>
    <string name="c_7">key</string>
    <string name="account_not_found">No se encontró ninguna cuenta vinculada a esta linea.</string>
    <string name="product_not_found">No se ha podido encontrar el paquete solicitado en mi.cubacel.net.</string>
    <string name="call_permission">Permiso de llamadas</string>
    <string name="call_permission_description">Es necesario para poder realizar las consultas de los códigos USSD y la sincronización de los datos con Etecsa</string>
    <string name="sms_permission">Permiso de sms</string>
    <string name="sms_permission_description">Se necesita para poder detectar los sms de los nuevos paquetes o planes que adquiera y registrarlos en la app</string>
    <string name="usage_access_permission">Acceso a Datos de Uso</string>
    <string name="usage_access_permission_description">Este permiso permite obtener del sistema la cantidad de megas consumidos por cada app en diferentes períodos de tiempo</string>
    <string name="draw_overlays_permission">Permiso para sobreponerse a otras apps</string>
    <string name="draw_overlays_permission_description">Se necesita para que se pueda mostrar la Burbuja Flotante o el Cortafuegos sobre otras apps</string>
    <string name="vpn_permission">Permiso para crear vpn</string>
    <string name="vpn_permission_description">Es necesario para crear una VPN que se utilizará como un cortafuegos para ahorrar sus megas</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ok">Aceptar</string>
    <string name="jump">Saltar</string>
    <string name="required_permission_denied">Sin este permiso la aplicación no puede funcionar.</string>
    <string name="optional_permission_denied">Sin este permiso algunas funciones no estarán disponibles.</string>
    <string name="btn_grant">Conceder</string>
    <string name="page_1_title">Compra tus Paquetes</string>
    <string name="page_1_description">Compra de manera fácil y segura todos los paquetes de datos de Etecsa.</string>
    <string name="page_2_title">Monitorea tu Consumo</string>
    <string name="page_2_description">Obtenga en tiempo real lo restante de tus megas y lo que han consumido las apps.</string>
    <string name="page_3_title">Controla tus gastos</string>
    <string name="terms_and_conditions_title">
        Términos y condiciones
    </string>
    <string name="terms_and_conditions">
        Estos son los términos y condiciones para usar la aplicación.
        Por favor, lea detenidamente este documento antes de realizar la compra.\n\n

        ▪ <b>¿Cúanto cuesta la licencia?</b>\nLa licencia ahora cuesta 30.00 MN.\n\n
        ▪ <b>¿Cómo se compra la Licencia?</b>\nLa licencia de Mis Datos se puede comprar mediante transferencia de saldo o transferencia bancaria usando solamente Transfermóvil. Por el momento no se soporta Enzona\n\n
        ▪ <b>¿Puedo realizar la transferencia desde cualquier otra app o marcando código USSD?</b>\nDebe hacer la transferencia usando el menú de Mis Datos para que pueda detectar la compra\n\n
        ▪ <b>¿Qué me otorga la licencia?</b>\nLa compra de la licencia no añade ninguna funcionalidad a la aplicación. Solo permitirá usarla completamente sin límite de tiempo\n\n
        ▪ <b>¿Es obligatorio comprar la licencia para usar la app?</b>\nUna vez se acabe el tiempo de prueba puede seguir utilizando Mis Datos para la compra de nuevos paquetes y algunas otras funciones, pero no estarán disponibles la mayoría de ellas hasta que no compre la licencia\n\n
        ▪ <b>¿Cuánto dura la licencia?</b>\nLa licencia es de por vida para su dispositivo, aún si actualiza la app o incluso restaura de fábrica su dispositivo, exceptuando los dispositivos con Android 11 en adelante. De Android 11 en adelante la licencia siempre es válida mientras no restaure de fábrica\n\n
        ▪ <b>¿Mi licencia sirve para otro teléfono?</b>\nNo. La licencia solo es válida para este dispositivo. Si cambia de teléfono deberá comprar una licencia nueva\n\n
        ▪ <b>¿Cómo obtengo la licencia?</b>\nPara obtener la licencia debe utilizar la opción que aparece en esta página para Transferir y Activar Mis Datos y seguir las instrucciones que se le darán\n\n
        ▪ <b>¿Cómo Mis Datos detecta la transferencia?</b>\nMis Datos detecta la transferencia mediante el sms de confirmación recibido. No debe quitarle el permiso de lectura de sms durante el proceso de activación\n\n
        ▪ <b>¿Qué puedo hacer si recibo el mensaje Problema de conexión o código MMI incorrecto al hacer la transferencia?</b>\nEste error casi siempre se produce cuando hay mala cobertura. Le recomendamos que busque un lugar con buena cobertura o intente poner modo avión por unos segundos y luego desactivarlo.\n
    </string>
    <string name="start_accessibility_service_title">Servicio de accesibilidad</string>
    <string name="start_accessibility_service_summary">Es necesario encender el servicio de accesibilidad para poder efectuar esta operación.</string>
    <string name="open_settings">Abrir ajustes</string>
    <string name="title_applications">Aplicaciones</string>
    <string name="vpn_access">Acceso del cortafuegos</string>
    <string name="ask">Preguntar por acceso en primer plano</string>
    <string name="traffic_type">Tipo de tráfico de red</string>
    <string name="traffic_international">Internacional</string>
    <string name="traffic_national">Nacional</string>
    <string name="traffic_free">Gratis</string>
    <string name="title_usage">Consumo</string>
    <string name="title_more">Más</string>
    <string name="title_resume">Resumen</string>
    <string name="themes_header">Temas</string>
    <string name="theme_summary">Tema principal de la aplicación</string>
    <string name="title_interface">Interfaz</string>
    <string name="random_theme">Aleatorio</string>
    <string name="other">Otro</string>
    <string name="restore_default">Restablecer predeterminados</string>
    <string name="restore_default_summary">Restaurar la configuración predeterminada</string>
    <string name="notification_header">Notificaciones</string>
    <string name="updates">Actualizaciones</string>
    <string name="history_cache_header">Historial y caché</string>
    <string name="about">Acerca de…</string>
    <string name="activation_header">Activación</string>
    <string name="enable_notification_update">Notificar las actualizaciones</string>
    <string name="enable_notification_update_summary">Notificar cuando se detecte una nueva actualización</string>
    <string name="auto_download_update">Descargar automáticamente</string>
    <string name="auto_download_update_summary">Descargar las actualizaciones automáticamente y después notificar para instalar</string>
    <string name="notification_style">Estilo de la notificación</string>
    <string name="notification_style_summary">Estilo que tendrá la notificación principal</string>
    <string name="main_notification">Notificación principal</string>
    <string name="secondary_notifications">Otras notificaciones</string>
    <string name="daily_bag_notification">Bolsa diaria</string>
    <string name="daily_bag_notification_summary">Notificar cuando quede el siguiente porcentaje de la bolsa diaria</string>
    <string name="international_notification">Datos internacionales</string>
    <string name="international_notification_summary">Notificar cuando quede el siguiente porcentaje de los datos internacionales</string>
    <string name="international_lte_notification">Datos internacionales (Lte)</string>
    <string name="international_lte_notification_summary">Notificar cuando quede el siguiente porcentaje de los datos internacionales lte</string>
    <string name="promo_bonus_notification">Bono de promoción</string>
    <string name="promo_bonus_notification_summary">Notificar cuando quede el siguiente porcentaje del bono de promoción</string>
    <string name="national_notification">Datos nacionales</string>
    <string name="national_notification_summary">Notificar cuando quede el siguiente porcentaje de los datos nacionales</string>
    <string name="show_secondary_notifications">Notificaciones de alerta de consumo</string>
    <string name="show_secondary_notifications_summary">Notificar cuando los diferentes tipos de datos se estén agotando. Para desabilitar una de las notificaciones solo debe establecer su valor en cero</string>
    <string name="foreground_access">Acceso en primer plano</string>
    <string name="open">Abrir</string>
    <string name="update_mode">Modo de actualización</string>
    <string name="agree_terms_and_conditions">Acepto los términos y condiciones</string>
    <string name="banking_transfer">Transferencia Bancaria vía Transfermóvil</string>
    <string name="credit_transfer">Transferencia de Saldo Móvil</string>
    <string name="transfer_mode">Modo de Compra</string>
    <string name="mode_transfer_description">Seleccione el modo de transferencia que utilizará para pagar la licencia de la app</string>
    <string name="traffic_messaging">Mensajería</string>
    <string name="vpn_access_summary">Permite el acceso en todo momento a Internet</string>
    <string name="foreground_access_summary">Solamente permite acceso a Internet cuando la app esté abierta y en primer plano</string>
    <string name="traffic_type_summary">Determina el tipo de consumo de esta app y por lo tanto de qué megas se descontará su consumo</string>
    <string name="others_header">Otros ajustes</string>
</resources>