<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/navigation_usage"
        android:icon="@drawable/ic_usage"
        android:title="@string/title_usage"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
    android:id="@+id/navigation_resume"
    android:icon="@drawable/ic_resume"
    android:title="@string/title_resume" />

    <item
        android:id="@+id/navigation_apps"
        android:icon="@drawable/ic_apps"
        android:title="@string/title_applications" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />
</menu>