<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/title_interface">

        <Preference
            app:title="@string/theme"
            app:summary="@string/theme_summary"
            app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$ThemesFragment" />

        <Preference
            app:title="@string/random_theme"
            app:summary="@string/random_theme_summary"
            app:key="random_theme" />

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/other">

        <Preference
            app:title="@string/restore_default"
            app:summary="@string/restore_default_summary"
            app:key="restore_default" />

    </PreferenceCategory>

    <!--<ListPreference
        app:key="theme_mode"
        android:entries="@array/theme_mode_entries"
        android:entryValues="@array/theme_mode_values"
        android:defaultValue="default_system"
        app:title="@string/theme_mode"
        app:useSimpleSummaryProvider="true" />-->

</PreferenceScreen>