<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:title="@string/enable_notification_update"
        app:summary="@string/enable_notification_update_summary"
        app:key="enabled_notification_update"
        app:defaultValue="true"/>

    <SwitchPreferenceCompat
        app:title="@string/auto_download_update"
        app:summary="@string/auto_download_update_summary"
        app:key="auto_update"
        android:defaultValue="false"/>

    <ListPreference
        app:title="@string/update_mode"
        app:key="update_mode"
        app:dependency="auto_update"
        app:entries="@array/update_modes"
        app:entryValues="@array/update_modes_values"
        app:defaultValue="APKLIS_SERVER" />

</PreferenceScreen>