<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$ThemesFragment"
        app:icon="@drawable/ic_themes"
        app:key="themes_key"
        app:title="@string/themes_header" />

    <Preference
        app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$NotificationsFragment"
        app:icon="@drawable/ic_notifications"
        app:key="notifications_key"
        app:title="@string/notification_header" />

    <Preference
        app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$HistoryFragment"
        app:icon="@drawable/ic_history"
        app:key="history_key"
        app:title="@string/history_cache_header" />

    <Preference
        app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$UpdatesFragment"
        app:icon="@drawable/ic_download"
        app:key="updates_key"
        app:title="@string/updates" />

    <Preference
        app:icon="@drawable/ic_money"
        app:key="activation_key"
        app:title="@string/activation_header" />

    <Preference
        app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$OthersFragment"
        app:key="others_key"
        app:icon="@drawable/ic_bug_report"
        app:title="@string/others_header" />

    <Preference
        app:fragment="com.smartsolutions.paquetes.ui.settings.SettingsActivity$AboutFragment"
        app:icon="@drawable/ic_info"
        app:key="about_key"
        app:title="@string/about" />

</PreferenceScreen>