<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_control"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:alpha="0"
    app:cardElevation="2dp"
    tools:alpha="1">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/vpn_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/vpn_access" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vpn_access_summary"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/foreground_access"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/foreground_access"
            android:textSize="16sp"
            android:layout_marginTop="6dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/foreground_access_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/foreground_access_summary"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/ask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ask" />

        <RadioGroup
            android:id="@+id/traffic_type_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_type"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_type_summary"/>

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/traffic_international"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_international" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/traffic_national"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_national" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/traffic_messaging"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_messaging" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/traffic_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/traffic_free" />

        </RadioGroup>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BaseButton.SecondaryButton"
                android:text="@string/open"
                android:textColor="?attr/colorPrimaryVariant" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>