<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.smartsolutions.paquetes.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.smartsolutions.paquetes.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_apps"
        android:name="com.smartsolutions.paquetes.ui.applications.ApplicationsFragment"
        android:label="@string/title_applications"
        tools:layout="@layout/fragment_applications" />

   <fragment
       android:id="@+id/navigation_usage"
       android:name="com.smartsolutions.paquetes.ui.usage.UsageFragment"
       android:label="@string/title_usage"
       tools:layout="@layout/fragment_usage"/>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.smartsolutions.paquetes.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
</navigation>