<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.activation.TermsAndConditionsFragment"
    android:padding="16dp">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_continue">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/terms_and_conditions_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginBottom="8dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/document_terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/terms_and_conditions"/>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/accept_terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agree_terms_and_conditions"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_continue"
        style="@style/BaseButton.SecondaryButton"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_cancel" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/btn_continue" />


</androidx.constraintlayout.widget.ConstraintLayout>